--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -1,7 +1,7 @@
 <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateFooter">
     <tr>
         <td valign="top" class="footerContent" mc:edit="footer_content00">
-            <a href="*|TWITTER:PROFILEURL|*">web version</a>&nbsp;&nbsp;&nbsp;<a href="*|UNSUB|*">unsubscribe</a>&nbsp;&nbsp;&nbsp;<a href="*|FORWARD|*">forward</a>
+            <a href="*|ARCHIVE|*">web version</a>&nbsp;&nbsp;&nbsp;<a href="*|UNSUB|*">unsubscribe</a>&nbsp;&nbsp;&nbsp;<a href="*|FORWARD|*">forward</a>
             <p><em>{{ page.footnote }}</em></p>
         </td>
     </tr>
