--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -473,6 +473,10 @@
   				padding-bottom:20px;
   				padding-left:20px;
 				}
+				
+				.bodyContent img{
+  				width:100%;
+				}
 
 				/* ======== Footer Styles ======== */
 
