Fixing responsive image in body

--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -280,6 +280,7 @@
 				border:none;
 				height: 5px;
 				background: #f3f3f3;
+				max-width: 450px;
 			}
 			
 			.bodyContent .question{
@@ -476,6 +477,11 @@
 				
 				.bodyContent img{
   				width:100%;
+				}
+				
+				.bodyContent hr{
+				  width:100%;
+				  max-width:100%;
 				}
 
 				/* ======== Footer Styles ======== */
