--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -469,10 +469,10 @@
 				.bodyContent{
 					/*@editable*/ font-size:18px !important;
 					/*@editable*/ line-height:125% !important;
-					padding-top:15px;
-  				padding-right:15px;
-  				padding-bottom:15px;
-  				padding-left:15px;
+					padding-top:20px;
+  				padding-right:20px !important;
+  				padding-bottom:20px;
+  				padding-left:20px !important;
 				}
 				
 				.bodyContent img{
